# FEUP-AEDA

./: README.md
EXAMS/aeda1516_ci4/: CMakeLists.txt
EXAMS/aeda1516_ci4/Tests/: Cinema.cpp  CinemaFinder.cpp  CinemaFinder.h  FilmTime.cpp  tests.cpp
EXAMS/aeda1617_ci3/: CMakeLists.txt
EXAMS/aeda1617_ci3/Tests/: Book.cpp  ReadingClub.cpp  ReadingClub.h  User.cpp  tests.cpp
EXAMS/aeda1819_ci1_googleTest/Tests/: Account.cpp  Account.h  Bank.cpp  Bank.h  BankOfficer.cpp  BankOfficer.h
EXAMS/aeda1819_ci2_googleTest/Tests/: CSimpleList.h  CStack.h  Kart.cpp  tests.cpp
EXAMS/aeda1819_ci3/: main.cpp
EXAMS/aeda1819_ci3/Tests/: Client.cpp  Client.h  ClientRecord.cpp  ClientRecord.h  Property.cpp  Property.h  PropertyTypeItem.cpp  PropertyTypeItem.h  REAgency.cpp  REAgency.h  tests.cpp
EXAMS/aeda1920_ci1/: Room.cpp  main.cpp
EXAMS/aeda1920_ci1/Tests/: Hotel.h  Room.cpp  Room.h  tests.cpp
EXAMS/aeda1920_ci2/: main.cpp
EXAMS/aeda1920_ci2/Tests/: Box.cpp  Box.h  Object.cpp  Object.h  ThinTallBox.cpp  ThinTallBox.h  Warehouse.cpp  Warehouse.h  WideFlatBox.cpp  WideFlatBox.h  tests.cpp
EXAMS/aeda1920_ci3/: main.cpp
EXAMS/aeda1920_ci3/Tests/: Gallery.cpp  Gallery.h  Paint.cpp  Paint.h  tests.cpp
EXAMS/aeda2021_ci1/: CMakeLists.txt  main.cpp
EXAMS/aeda2021_ci1/Tests/: call.cpp  (+6 more)
EXERCISES/aeda2021_p02_extra/: CMakeLists.txt
EXERCISES/aeda2021_p02_extra/Tests/: animal.cpp  animal.h  tests.cpp  veterinary.cpp  zoo.cpp  zoo.h
EXERCISES/aeda2021_p07/: CMakeLists.txt
EXERCISES/aeda2021_p07/Tests/: dictionary.cpp  dictionary.h  game.cpp  game.h  tests.cpp
(+25 files in other folders)
